Fixed the pytest issue

--- a/python-survey-app/pytest.ini
+++ b/python-survey-app/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
-python_files = tests.py
+python_files = test_app.py
 #addopts=--tb=native --cov=calc --cov=helpers --cov-report term-missing
-addopts=-v --cov=python-survey-app --cov-report term-missing
+#addopts=-v --cov=python-survey-app --cov-report term-missing
+addopts=-v --cov=survey --cov-report term-missing
