--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ __pycache__/
 
 #Terraform Files
 mvtools/terraform-iac/.terraform/providers/registry.terraform.io/hashicorp/aws/4.57.1/linux_amd64/terraform-provider-aws_v4.57.1_x5
+aws-credentials
 
 #AWS credentials
 mvtools/aws-credentials
