--- a/.github/workflows/multiverse.yaml
+++ b/.github/workflows/multiverse.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   pytest:
-    name: Test the demo module 
+    name: Test the python survey app 
     runs-on: ubuntu-latest
     steps:
     - name: Checkout the repository
