--- a/.github/workflows/multiverse.yaml
+++ b/.github/workflows/multiverse.yaml
@@ -70,5 +70,5 @@ jobs:
         github.event_name != 'pull_request'
       with:
         add: '*.tfstate*'
-        cwd: './terraform-iac'
+        cwd: './mvtools/terraform-iac'
         message: 'Adding the up-to-date Terraform state file'
