--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+#Uneeded Files for the Repo
+.github/workflows/terraform-destroy.yaml
+mvtools/terraform-iac/.terraform.lock.hcl
+mvtools/terraform-iac/.terraform/
+mvtools/terraform-iac/terraform.tfstate
+mvtools/terraform-iac/terraform.tfstate.backup
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
